# TFT-ROS2

./: .dockerignore  .gitignore  Dockerfile  README.md
docker/: bashrc.append  entrypoint.sh  requirements-rl.txt
scripts/: attach.sh  build.sh  colcon_build.sh  run.sh  setup_repo.sh
src/pkg_dataset/: CMakeLists.txt  README.md  package.xml
src/pkg_dataset/config/: dataset_config.yaml
src/pkg_dataset/launch/: record_dataset.launch.py
src/pkg_dataset/scripts/: build_dataset_index.py  convert_to_lerobot_stub.py  episode_validator.py  gazebo_entity_utils.py  record_n_episodes.py  record_pick_place_episode.py  scene_randomizer.py
src/pkg_description/: CMakeLists.txt  package.xml
src/pkg_description/config/: sensors.yaml
src/pkg_description/launch/: visualize_franka.launch.py  visualize_franka_duo.launch.py
src/pkg_description/urdf/: fp3.srdf.xacro  fp3.urdf.xacro  panda_tfg.urdf.xacro
src/pkg_description/urdf/arm/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_arm.xacro  utils.xacro
src/pkg_description/urdf/common/: franka_robot.xacro  gazebo_plugins.xacro
src/pkg_description/urdf/end_effectors/franka_hand/: ee_with_one_link.xacro  franka_hand.urdf.xacro  franka_hand.xacro  franka_hand_arguments.xacro  utils.xacro
src/pkg_gazebo/: CMakeLists.txt  package.xml
src/pkg_gazebo/config/: controllers.yaml  object_spawn.yaml  physics.yaml  ros_gz_bridge.yaml
src/pkg_gazebo/launch/: bridge.launch.py  full_sim.launch.py  sim.launch.py  spawn_objects.launch.py  spawn_robot.launch.py  view_camera.launch.py
src/pkg_gazebo/models/blue_cube/: model.config  model.sdf
src/pkg_gazebo/models/blue_goal/: model.config  model.sdf
src/pkg_gazebo/models/conveyor/: model.config  model.sdf
src/pkg_gazebo/models/red_cube/: model.config  model.sdf
src/pkg_gazebo/models/red_goal/: model.config  model.sdf
src/pkg_gazebo/rviz/: gazebo_debug.rviz
src/pkg_gazebo/scripts/: command_gripper.py  command_joint_position.py  manual_pick_test.py  reset_objects.py  spawn_random_objects.py
src/pkg_gazebo/worlds/: fp3_pick_place_world.sdf
src/pkg_moveit_config/: CMakeLists.txt  package.xml
src/pkg_moveit_config/config/: fp3.srdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_scene_monitor.yaml  trajectory_execution.yaml
src/pkg_moveit_config/launch/: demo_xyz.launch.py  move_to_named_pose.launch.py  moveit.launch.py  moveit_gazebo.launch.py
src/pkg_moveit_config/rviz/: moveit.rviz
src/pkg_moveit_config/src/: move_gripper.cpp  move_to_named_pose.cpp  move_to_xyz.cpp
src/pkg_rl/: package.xml  setup.cfg  setup.py
