<?xml version="1.0"?>
<package format="3">
  <name>pkg_dataset</name>
  <version>0.1.0</version>
  <description>Dataset generation package for FP3 Panda pick and place demonstrations.</description>

  <maintainer email="victor@example.com">Victor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>pkg_gazebo</exec_depend>
  <exec_depend>pkg_moveit_config</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>