<?xml version="1.0"?>
<package format="3">
  <name>pkg_moveit_config</name>
  <version>0.1.0</version>
  <description>
    MoveIt 2 configuration package for the TFG Panda pick and place project.
    Includes planning configuration, controllers, MoveIt Task Constructor nodes
    and dataset generation scripts.
  </description>

  <maintainer email="victor@example.com">Victor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pkg_description</depend>
  <depend>pkg_gazebo</depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_task_constructor_core</depend>

  <depend>geometric_shapes</depend>
  <depend>shape_msgs</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <depend>xacro</depend>
  <depend>rviz2</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>