<?xml version="1.0"?>
<package format="3">
  <name>pkg_moveit_config</name>
  <version>0.1.0</version>
  <description>
    MoveIt 2 configuration for the FP3 Panda pick and place simulation project.
  </description>

  <maintainer email="victor@example.com">Victor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pkg_description</depend>
  <depend>pkg_gazebo</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>

  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>